@@ -42,6 +42,8 @@ Clients:
   option.
 - Add `-x` to all clients to all the session-expiry-interval property to be
   easily set for MQTT v5 clients.
+- Default behaviour for v5 clients using `-c` is now to use infinite length
+  sessions, as with v3 clients. Closes #1546.
 
 
 1.6.8 - 20191128
